--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,22 @@
-<h2>Selamat Datang</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto aspernatur, earum eos fuga id iste iusto
-    nihil quia similique temporibus voluptatum? Ab accusantium culpa facilis, ipsam quibusdam voluptas voluptate.</p>
+<img src="img/banner.jpg" alt="" class="materialboxed" width="100%">
+
+<h3>Tafsir Al-Quran Online</h3>
+<p>
+    TafsirQ adalah sebuah search engine khusus tafsir Al-Quran dan Hadits, untuk memudahkan umat islam mencari dan
+    memahami tafsir ayat-ayat Al-Qur'an dan Hadits.
+</p>
+
+<p>
+    Konten yang berada di TafsirQ ada beberapa tipe :
+
+<ol>
+    <li>Open Data, yaitu konten yang telah tersedia dan bisa diakses oleh siapa saja melalui
+        http://tanzil.net/wiki/Quran_Metadata
+    </li>
+    <li>Scrapping Data, yaitu konten yang diagregasi dari berbagai website di internet</li>
+    <li>Partner Data, yaitu konten yang merupakan hasil kerjasama dengan pihak yang memiliki hak cipta/copy/distribusi
+        dari konten
+    </li>
+    <li>User Generated, yaitu konten yang merupakan kontribusi dari pengguna/pengunjung TafsirQ</li>
+</ol>
+</p>
