--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8"/>
     <title>TafsirQ</title>
-    <meta name="description" content="My first PWA"/>
+    <meta name="description" content="TafsirQ Adalah Al-Quran Online Bahasa Indonesia"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/materialize.min.css">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#00897B"/>
 </head>
 <body>
