Tampilkan artikel menggunakan fetch API

--- a/nav.html
+++ b/nav.html
@@ -2,3 +2,4 @@
 <li><a class="waves-effect" href="#quran">Quran</a></li>
 <li><a class="waves-effect" href="#hadits">Hadits</a></li>
 <li><a class="waves-effect" href="#doa">Doa</a></li>
+<li><a class="waves-effect" href="#artikel">Artikel</a></li>
