--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="theme-color" content="#00897B"/>
 </head>
 <body>
+
 <!-- Navigasi -->
 <nav class="brown" role="navigation">
     <div class="nav-wrapper container">
@@ -21,27 +22,13 @@
     </div>
 </nav>
 <!-- Akhir Navigasi -->
-<div class="container" id="body-content"></div>
-<script src="js/materialize.min.js"></script>
-<script src="js/nav.js"></script>
 
-<script>
-  // REGISTER SERVICE WORKER
-  if ("serviceWorker" in navigator) {
-    window.addEventListener("load", function () {
-      navigator.serviceWorker
-        .register("/service-worker.js")
-        .then(function () {
-          console.log("Pendaftaran ServiceWorker berhasil");
-        })
-        .catch(function () {
-          console.log("Pendaftaran ServiceWorker gagal");
-        });
-    });
-  } else {
-    console.log("ServiceWorker belum didukung browser ini.");
-  }
-</script>
+<div class="container" id="body-content"></div>
+
+<script src="js/materialize.min.js"></script>
+<script src="js/api.js"></script>
+<script src="js/nav.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
